--- a/style.css
+++ b/style.css
@@ -257,9 +257,8 @@ footer{
     }
 
     .contato ul{
-        font-size: .6em;
+        font-size: .5em;
         text-align: center;
-        margin-top: 0;
-        margin-right: 0;
+        margin: 0 auto;
     }
 }
